--- a/example_gyroscope/index.html
+++ b/example_gyroscope/index.html
@@ -1,1 +1,116 @@
- 
+<!doctype html>
+
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+
+        <title>The HTML5 Herald</title>
+        <meta name="description" content="Gyroscope">
+        <meta name="author" content="JaimehRubiks">
+
+        <style>
+            .garden {
+                position: relative;
+                width : 200px;
+                height: 200px;
+                border: 5px solid #CCC;
+                border-radius: 10px;
+            }
+
+            .ball {
+                position: absolute;
+                top   : 90px;
+                left  : 90px;
+                width : 20px;
+                height: 20px;
+                background: green;
+                border-radius: 100%;
+            }
+        </style>
+    </head>
+
+
+    <body>
+        <div class="garden">
+        <div class="ball"></div>
+        </div>
+
+        <pre class="output"></pre>
+
+        <script src="../src/phoenixjs.js"></script> 
+        <script>
+            var api = new Phoenixjs();
+            var ball   = document.querySelector('.ball');
+            var garden = document.querySelector('.garden');
+            var output = document.querySelector('.output');
+
+            var maxX = garden.clientWidth  - ball.clientWidth;
+            var maxY = garden.clientHeight - ball.clientHeight;
+
+
+         var states={
+             STOP: 0,
+             FORWARDS: 1,
+             BACKWARDS: 2,
+             RIGHT: 3,
+             LEFT: 4
+         }
+         var state = states.STOP;
+
+
+            function handleOrientation(event) {
+                var x = event.beta;  // In degree in the range [-180,180]
+                var y = event.gamma; // In degree in the range [-90,90]
+
+                output.innerHTML  = "beta : " + x + "\n";
+                output.innerHTML += "gamma: " + y + "\n";
+                var beta = x; var gamma = y;
+
+                // MOVEMENT LOGIC
+                if (beta > -30 && beta < 40 && gamma < 50 && gamma > -35){
+                    if(state != states.STOP){
+                        state = states.STOP;
+                        api.move(Phoenixjs.Movement.STOP);
+                    }
+                }else if(beta < -30){
+                    if(state != states.FORWARDS){
+                        state = states.FORWARDS;
+                        api.move(Phoenixjs.Movement.FORWARDS);
+                    }
+                }else if(beta > 40){
+                    if(state != states.BACKWARDS){
+                        state = states.BACKWARDS;
+                        api.move(Phoenixjs.Movement.BACKWARDS);
+                    }
+                }else if(gamma > 50){
+                    if(state != states.RIGHT){
+                        state = states.RIGHT;
+                        api.move(Phoenixjs.Movement.RIGHT);
+                    }
+                }else if(gamma < -35){
+                    if(state != states.LEFT){
+                        state = states.LEFT;
+                        api.move(Phoenixjs.Movement.LEFT);
+                    }
+                }
+
+                // Because we don't want to have the device upside down
+                // We constrain the x value to the range [-90,90]
+                if (x >  90) { x =  90};
+                if (x < -90) { x = -90};
+
+                // To make computation easier we shift the range of 
+                // x and y to [0,180]
+                x += 90;
+                y += 90;
+
+                // 10 is half the size of the ball
+                // It center the positioning point to the center of the ball
+                ball.style.top  = (maxX*x/180 - 10) + "px";
+                ball.style.left = (maxY*y/180 - 10) + "px";
+            }
+
+            window.addEventListener('deviceorientation', handleOrientation);
+        </script>
+    </body>
+</html>
