--- a/example_manager/public/index.html
+++ b/example_manager/public/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>The HTML5 Herald</title>
+        <title>MultiPhoenix Controller</title>
         <meta name="description" content="Gyroscope">
         <meta name="author" content="JaimehRubiks">
         <!--Import Google Icon Font-->
@@ -15,6 +15,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
         <style>
+         .body{
+             margin: 10px;
+         }
          .garden {
              position: relative;
              width : 200px;
@@ -45,7 +48,7 @@
     <body>
         <h1>Detected Devices</h1>
         <table id="netlist">
-            <tr><th>Name</th><th>IP</th><th>Add</th></tr>
+            <tr><th>IP</th><th>Name</th><th>Add</th></tr>
         </table>
         <h1>Selected Devices</h1>
         <ul id="selectedlist"></ul>
